--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="https://adventofcode.com/2020/day/1">Link to advent of code</a>
     <script src="day1Part1.js"></script>
   </body>
 </html>
